[package]
name = "py_deno_core"
version = "0.1.0"
authors = ["Tyler Kennedy <tk@tkte.ch>"]
edition = "2018"
publish = false
description = "Python bindings for deno_core."

[lib]
name = "deno_core"
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.88.1"
# tokio = "1.6.1"
async-std = "1.9"
serde_json = "1.0"
serde_v8 = "0.4.0"
serde = "1.0"
pythonize = "0.13.0"
futures = "0.3"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
# version = "0.13.0"
features = ["async-std-runtime"]
git = "https://github.com/awestlake87/pyo3-asyncio.git"
branch = "local-tasks"
